# Gamos

GAMOS.5.0.0/analysis/RTPhaseSpace/sumPS/src/: FILE2MEMORY.cc  Makefile.am  Makefile.in  egsclass.cc  general.cc  histogram.cc  iaeaHeader.cc  iaeaRecord.cc  iaeaUtilities.cc  matrix.cc  utilities.cc
GAMOS.5.0.0/source/Detector/: CMakeLists.txt
GAMOS.5.0.0/source/Detector/Base/: CMakeLists.txt  GNUmakefile  sources.cmake
GAMOS.5.0.0/source/Detector/Base/include/: Det1stHitByComptonCone.hh  Det1stHitByDistanceToOther.hh  Det1stHitByEnergy.hh  Det1stHitByXPos.hh  Det1stHitByXYPos.hh  Det1stHitByXYZPos.hh  DetCAlgoEnergy.hh  DetCAlgoXPos.hh  DetCAlgoXYPos.hh  DetCAlgoXYZPos.hh  DetCAlgoXZPos.hh  DetCAlgoYPos.hh  DetCAlgoYZPos.hh  DetCAlgoZPos.hh  DetCClassifALL.hh  DetCClassifEnergyAverage.hh  DetCClassifEnergyMax.hh  DetCClassifEnergyMin.hh  DetCClassifNRecHit.hh  DetCClassifXPosMin.hh  DetCClassifXYPosMin.hh  DetCClassifXYZPosMin.hh  DetCClassifXZPosMin.hh  DetCClassifYPosMin.hh  DetCClassifYZPosMin.hh  DetCClassifZPosMin.hh  DetComptonStudyHistosUA.hh  DetCountScatteringUA.hh  DetCutsStudyFilter.hh  DetHistosGammaDist.hh  DetRecHitCone.hh  DetRecHitSet.hh  DetV1stHitAlgorithm.hh  DetVComptAlgorithmVariable.hh  DetVComptClassificationVariable.hh  DetVerbosity.hh
GAMOS.5.0.0/source/Detector/Base/src/: Det1stHitByEnergy.cc  (+36 more)
GAMOS.5.0.0/source/Detector/ComptonCamera/: CMakeLists.txt  GNUmakefile  sources.cmake
GAMOS.5.0.0/source/Detector/PET/: CMakeLists.txt  GNUmakefile  sources.cmake
GAMOS.5.0.0/source/Detector/SPECT/: CMakeLists.txt  GNUmakefile  sources.cmake
(+6188 files in other folders)
