#------------------------------------------------------------------------------
# 
# Module : Detector
# Package: 
#
#------------------------------------------------------------------------------
add_definitions(-D_ALLOC_EXPORT)

add_subdirectory(SPECT)
add_subdirectory(ComptonCamera)
add_subdirectory(PET)
add_subdirectory(Base)
