bin_PROGRAMS = sumphsp
sumphsp_SOURCES = sumphsp.cpp egsclass.cpp egsclass.h FILE2MEMORY.cpp \
	FILE2MEMORY.h general.cpp general.h histogram.cpp histogram.h Makefile.am Makefile.in \
	matrix.cpp matrix.h utilities.cpp utilities.h

# set the include path found by configure
INCLUDES= $(all_includes)

# the library search path.
sumphsp_LDFLAGS = $(all_libraries) 
